<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!--
    I'm using a constraint layout here because there are many views grouped horizontally and vertically
    and the constraint layout avoid us create extra layouts to group that
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.DetailFragment">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_shoe_title"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/name"
            android:inputType="text"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toStartOf="@id/etSize"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:hint="@string/size_in_cm"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/etName"
            app:layout_constraintTop_toTopOf="@id/etName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            android:inputType="text"
            android:text="@={shoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="2"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCompany" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.Colored.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/btnSave"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDescription" />

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.AppCompat.Button.Colored.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintTop_toTopOf="@id/btnCancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>